@@ -53,20 +53,6 @@ class IPv4Address {
 							uint8_t c, uint8_t d) noexcept {
 		return {{{ a, b, c, d }}};
 	}
-
-	/**
-	 * @param x the 32 bit IP address in network byte order
-	 */
-	static constexpr struct in_addr ConstructInAddrBE(uint32_t x) noexcept {
-		return (struct in_addr){{.S_addr=x}};
-	}
-
-	/**
-	 * @param x the 32 bit IP address in host byte order
-	 */
-	static constexpr struct in_addr ConstructInAddr(uint32_t x) noexcept {
-		return ConstructInAddr(x >> 24, x >> 16, x >> 8, x);
-	}
 #else
 
 #ifdef __BIONIC__
@@ -78,11 +64,19 @@ class IPv4Address {
 		return ToBE32((a << 24) | (b << 16) | (c << 8) | d);
 	}
 
+	static constexpr struct in_addr ConstructInAddr(uint8_t a, uint8_t b,
+							uint8_t c, uint8_t d) noexcept {
+		return { ConstructInAddrT(a, b, c, d) };
+	}
+#endif
+
 	/**
 	 * @param x the 32 bit IP address in network byte order
 	 */
 	static constexpr struct in_addr ConstructInAddrBE(uint32_t x) noexcept {
-		return { x };
+		struct in_addr ia{};
+		ia.s_addr = x;
+		return ia;
 	}
 
 	/**
@@ -92,26 +86,16 @@ class IPv4Address {
 		return ConstructInAddrBE(ToBE32(x));
 	}
 
-	static constexpr struct in_addr ConstructInAddr(uint8_t a, uint8_t b,
-							uint8_t c, uint8_t d) noexcept {
-		return { ConstructInAddrT(a, b, c, d) };
-	}
-#endif
-
 	/**
 	 * @param port the port number in host byte order
 	 */
 	static constexpr struct sockaddr_in Construct(struct in_addr address,
 						      uint16_t port) noexcept {
-		return {
-#ifdef HAVE_STRUCT_SOCKADDR_IN_SIN_LEN
-			sizeof(struct sockaddr_in),
-#endif
-			AF_INET,
-			ToBE16(port),
-			address,
-			{},
-		};
+		struct sockaddr_in sin{};
+		sin.sin_family = AF_INET;
+		sin.sin_port = ToBE16(port);
+		sin.sin_addr = address;
+		return sin;
 	}
 
 	/**
